--- a/coe-client/package.json
+++ b/coe-client/package.json
@@ -10,6 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-paginate": "^8.2.0",
+    "react-pagination": "^1.0.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
