--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,11 +1,11 @@
-daemon==1.2
-Flask==2.3.2
-make==0.1.6.post2
-makefile==1.1.0
-numpy==1.24.3
-pandas==2.0.2
-pymongo==4.4.0
-python-dateutil==2.8.2
-requests==2.28.1
+daemon
+Flask
+make
+makefile
+numpy
+pandas
+pymongo
+python-dateutil
+requests
 logging
 flask-cors
