--- a/coe-client/package.json
+++ b/coe-client/package.json
@@ -8,16 +8,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.10.5",
+    "plotly.js": "^2.24.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
     "react-pagination": "^1.0.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
