--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
-    "node": "^20.3.1"
+    "node": "^20.3.1",
+    "nodemon": "^3.0.1"
   }
 }
