--- a/coe-client/package.json
+++ b/coe-client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.10.5",
+    "d3": "^7.8.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -18,6 +19,10 @@
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.7.2",
+    "socket.io-client": "^4.7.1",
+    "three": "^0.154.0",
+    "three-text2d": "^0.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.0"
   }
 }
